# khttpd-next

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.bcr/: MODULE.bazel  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: bazel.yml  publish_to_bcr.yml
doc/: advanced.md  api-reference.md  architecture.md  http-client.md  index.md  quick-start.md
example/: BUILD.bazel  HelloWsController.hpp  MODULE.bazel  main.cpp
framework/: BUILD.bazel  io_context_pool.hpp  server.cpp  server.hpp
framework/client/: api_macros.hpp  host_pool.cpp  host_pool.hpp  http_client.cpp  http_client.hpp  websocket_client.cpp  websocket_client.hpp
framework/context/: http_context.cpp  websocket_context.cpp  websocket_context.hpp
framework/cron/: CronJob.hpp  CronScheduler.hpp
framework/di/: di_container.hpp
framework/router/: http_router.cpp  websocket_router.cpp
framework/session/: http_session.cpp  http_session.hpp
framework/tests/: BUILD.bazel  client_test.cpp  context_test.cpp  cronjob_test.cpp  di_container_test.cpp  http_context_multipart_edge_test.cpp  router_test.cpp  server_stability_test.cpp  session_test.cpp  websocket_context_test.cpp
framework/websocket/: websocket_session.cpp  websocket_session.hpp
