module(
    name = "khttpd",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_perl", version = "0.4.3")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
single_version_override(
    module_name = "rules_foreign_cc",
    patches = [
        "//patches:rules_foreign_cc/foreign_cc.built_tools.pkgconfig_build.bzl.patch",
    ],
    version = "0.14.0",
)

bazel_dep(name = "fmt", version = "12.0.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "sqlite3", version = "3.50.4")
bazel_dep(name = "openssl", version = "3.3.1.bcr.9")
bazel_dep(name = "boringssl", version = "0.20251110.0")
bazel_dep(name = "boost", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.asio", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.json", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.mysql", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.beast", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.filesystem", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.url", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.uuid", version = "1.89.0.bcr.2")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")
