module(
    name = "khttpd",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_perl", version = "1.1.1")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "sqlite3", version = "3.53.2")
bazel_dep(name = "openssl", version = "3.5.5.bcr.4")
bazel_dep(name = "boringssl", version = "0.20260616.0")
bazel_dep(name = "boost", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.json", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.mysql", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.filesystem", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.url", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.uuid", version = "1.90.0.bcr.1")
bazel_dep(name = "spdlog", version = "1.17.0")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")
