load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "context_test",
    srcs = ["context_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "router_test",
    srcs = ["router_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "di_container_test",
    srcs = ["di_container_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "interceptor_test",
    srcs = ["interceptor_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "client_test",
    srcs = ["client_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cronjob_test",
    srcs = ["cronjob_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "websocket_context_test",
    srcs = ["websocket_context_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "http_context_multipart_edge_test",
    srcs = ["http_context_multipart_edge_test.cpp"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-pedantic",
    ],
    deps = [
        "//framework",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
